--- a/sources/requirements.txt
+++ b/sources/requirements.txt
@@ -1,33 +1,39 @@
 alabaster==0.7.12
 amqstompclient==1.1.12
 arrow==0.13.1
+astroid==2.3.1
 Babel==2.7.0
+cachetools==3.1.1
 certifi==2018.8.24
 chardet==3.0.4
 Click==7.0
 cycler==0.10.0
 docopt==0.6.2
 docutils==0.14
-elastic-helper==1.0.9
+elastic-helper==1.1.4
 elasticsearch==6.3.1
 Flask==1.0.2
 Flask-Cors==3.0.7
 gunicorn==19.9.0
 idna==2.7
 imagesize==1.1.0
+isort==4.3.21
 itsdangerous==0.24
 Jinja2==2.10
 kiwisolver==1.0.1
+lazy-object-proxy==1.4.2
 limits==1.3
 lxml==4.3.0
 MarkupSafe==1.0
 matplotlib==3.0.2
+mccabe==0.6.1
 numpy==1.15.4
 packaging==19.0
 pandas==0.23.4
 passlib==1.7.1
 psycopg2==2.7.7
 Pygments==2.4.2
+pylint==2.4.2
 pyparsing==2.3.1
 pypng==0.0.19
 PyQRCode==1.2.1
@@ -37,7 +43,7 @@ python-logstash-async==1.4.1
 pytz==2018.7
 redis==3.0.1
 requests==2.19.1
-six==1.11.0
+six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==2.1.2
 sphinx-rtd-theme==0.4.3
@@ -49,8 +55,10 @@ sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
 SQLAlchemy==1.2.17
 stomp.py==4.1.21
+typed-ast==1.4.0
 tzlocal==1.5.1
 urllib3==1.23
 Werkzeug==0.14.1
+wrapt==1.11.2
 xlrd==1.2.0
 XlsxWriter==1.1.2
