--- a/sources/requirements.txt
+++ b/sources/requirements.txt
@@ -1,30 +1,24 @@
 alabaster==0.7.12
 amqstompclient==1.1.12
-cachetools==3.1.1
 arrow==0.13.1
-attrs==19.1.0
+astroid==2.3.1
 Babel==2.7.0
 cachetools==3.1.1
 certifi==2018.8.24
 chardet==3.0.4
 Click==7.0
-commonmark==0.9.0
 cycler==0.10.0
 docopt==0.6.2
 docutils==0.14
-elastic-helper==1.1.4
-elasticsearch==6.3.1
-et-xmlfile==1.0.1
+elastic-helper==1.1.5
+elasticsearch==7.0.5
 Flask==1.0.2
 Flask-Cors==3.0.7
-future==0.17.1
 gunicorn==19.9.0
-humanfriendly==4.18
 idna==2.7
 imagesize==1.1.0
 isort==4.3.21
 itsdangerous==0.24
-jdcal==1.4
 Jinja2==2.10
 kiwisolver==1.0.1
 lazy-object-proxy==1.4.2
@@ -34,11 +28,9 @@ MarkupSafe==1.0
 matplotlib==3.0.2
 mccabe==0.6.1
 numpy==1.15.4
-openpyxl==3.0.2
 packaging==19.0
 pandas==0.23.4
 passlib==1.7.1
-pip-tools==4.2.0
 psycopg2==2.7.7
 Pygments==2.4.2
 pylint==2.4.2
@@ -49,14 +41,11 @@ python-dateutil==2.7.5
 python-docx==0.8.10
 python-logstash-async==1.4.1
 pytz==2018.7
-PyYAML==5.1.1
 redis==3.0.1
 requests==2.19.1
-selenium==3.141.0
 six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==2.1.2
-sphinx-bootstrap-theme==0.7.1
 sphinx-rtd-theme==0.4.3
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
