--- a/sources/requirements.txt
+++ b/sources/requirements.txt
@@ -19,6 +19,7 @@ python-dateutil==2.8.2
 python-logstash-async==1.4.1
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
+regex==2022.10.31
 requests==2.20.0
 six==1.16.0
 stomp.py==4.1.21
